feat: freeway-bench CLI app built on Freeway
New bench CLI application built on Freeway framework:
- FreewayApp + AppBuilder entry point (boot)
- IoC Command pattern + CliModule (ioc)
- SQLite persistence with Orm + Schema.ensure() (db)
- EventBus lifecycle events (ioc)
- JsonCodec for output (commons)

Commands:
  run       Single benchmark (--mode=long|short)
  suite     Multi engine/scenario/concurrency combinations
  list      Query history from SQLite
  compare   Two-run comparison with auto-baseline
  history   Trend visualization

ServerHarness redesign:
- Engine/Scenario enum architecture
- Disabled noop CorsFilter/HealthFilter
- Proper bare HttpServer keep-alive handler
- Native Undertow + Robaho + JDK support

Benchmark fixes:
- HttpContextLookupBenchmark: uses real FreewayHttpContext
- FilterChainBenchmark: moved to engine/ package, real context
- Added JsonCodecBenchmark, WebSocketFrameBenchmark
- Http11Client: customizable request pattern
- Fork mode: fixed classpath + -D arg ordering + Windows file locking

Commons:
- Javadoc fixes in commons.bean package
- BeanPlan.java misplaced Javadoc positions fixed
- MethodHandleUtils class-level Javadoc added